# Triton

./: docker-compose.yaml  steps.md
backend/: .dockerignore  .gitignore  dockerfile  pyproject.toml
backend/api/: main.py
backend/api/data/: api_ProjectGutenberg.py
backend/api/model/: api_LLM.py
datasource/: .gitignore  dockerfile  pyproject.toml
datasource/src/: api_ProjectGutenberg.py  main.py
frontend/: dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: LeftPanel.tsx  MiddlePanelTabs.tsx  PoemsTable.tsx  RightPanel.tsx  tabs.tsx
