[project]
name = "triton-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rohan Yadav",email = "drohanyadav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "gutenbergdammit @ https://github.com/aparrish/gutenberg-dammit/archive/master.zip",
    "pandas (>=2.2.3,<3.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "google-genai (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false